fixed number bubbles on safari mobile

--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -69,14 +69,14 @@ h7 {
 #users {
   margin-left: auto;
   margin-right: auto;
-  width: 40vw;
+  width: 12vw;
   height: auto;
 }
 
 .user-txt {
   margin-left: auto;
   margin-right: auto;
-  width: 80vw;
+  width: 20vw;
   text-align: center;
 }
 
